--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jos-animation": "^0.9.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^2.0.5",
     "react-router-dom": "^6.20.1",
     "sweetalert": "^2.1.2",
     "swiper": "^11.0.5"
@@ -24,6 +25,7 @@
     "@types/react-dom": "^18.2.15",
     "@vitejs/plugin-react": "^4.2.0",
     "autoprefixer": "^10.4.16",
+    "dotenv": "^16.4.5",
     "eslint": "^8.53.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
